  * Fix spurious warnings for integer division from:  (x + 100.0) / 10
  * Fix spurious warnings for implicit returns when raise in except: clause
  * Fix various spurious warnings when using Python 2.2
  * Fix spurious warning for overridden method mismatch when using exec
  * Fix spurious warning when doing len(filter(lambda x: ..., ...))

Version 0.8.7   - 05 January 2002
  * Add -2/--constcond option to warn if using a constant 
        in a conditional statement (if '': ; while 'str': ; etc)
  * Add -1/--constant1 option to warn when using if 1: or while 1: etc.
  * Add -8/--unreachable option to warn about unreachable code
  * Add -9/--members option to warn about unused data members
  * Add -w/--shadow for local variable shadowing global variable
  * Add warning statements with no effect (load var, but do nothing)
  * Handle string multiplication (helps format strings)
        code like this doesn't generate a warning now:  '%d ' * 3 % (1, 2, 3)
  * Fix -C/--implicitreturns option so it works, turn it on by default
  * Fix spurious warning when accessing 'static' class members that are methods
        (e.g. class C(B): __super_init = B.__init__) (still a problem w/2.2)
  * Fix some strange spurious warnings and exceptions
  * Handle nested scopes better, includes fixing a crash and
        eliminating some spurious warnings

Version 0.8.6   - 16 November 2001
  * Add -5/--maxrefs for maximum # of identifier references (Law of Demeter)
  * Fix problem where user defined classes weren't checked for valid attributes
  * Allow use of __pychecker__ in class scope
  * Fix a lot of global function arg counts for Python 2.2
        (many constructors can take no arguments now)
  * Fix spurious warning (Function return types are inconsistent)
        when multiple returns w/a constant & a local variable of same type
  * Fix spurious warning for format strings when using a dict local variable
  * Rename pychecker.sh script to pychecker on Unix
