@@ -1,0 +1,6 @@
+'doc'
+
+class Bar:
+    'doc'
+    def __init__(self): pass
+
