@@ -1,0 +1,7 @@
+'doc'
+
+from import56a import Foo
+
+def x():
+  print Foo
+
